--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+    <!--carousel-->
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="true" data-bs-interval="2000" data-bs-pause="hover"><!--Mouse em sima para o movimento e passa a cada dois segundos e meio com ride após o primeiro toque ele começa a andar-->
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <img src="https://as1.ftcdn.net/v2/jpg/04/06/44/74/1000_F_406447490_r3lCiPmCXT65jCnNsRtRJOOvkxTnH2Sz.jpg" class="d-block w-100" alt="Desenho de cidade lateralizada">
+            <img src="https://as1.ftcdn.net/v2/jpg/04/06/44/74/1000_F_406447490_r3lCiPmCXT65jCnNsRtRJOOvkxTnH2Sz.jpg" class="d-block w-100" style="height: 300px;" alt="Desenho de cidade lateralizada">
             </div>
             <div class="carousel-item">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtLTpz0kCoXQQFyGBZHzz27x46G8_UvPgkSwiRcEeHTIzQULiyie4z5E2-My87c0LAdw&usqp=CAU" class="d-block w-100" alt="Baia de uma cidade">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtLTpz0kCoXQQFyGBZHzz27x46G8_UvPgkSwiRcEeHTIzQULiyie4z5E2-My87c0LAdw&usqp=CAU" class="d-block w-100" style="height: 300px;" alt="Baia de uma cidade">
             </div>
             <div class="carousel-item">
-            <img src="https://as1.ftcdn.net/v2/jpg/04/12/34/36/1000_F_412343650_Ogy9v3RAJsWPrxDmVcbbsv7HVF3DJo8Y.jpg" class="d-block w-100" alt="nuvens nos topos dos prédios">
+            <img src="https://as1.ftcdn.net/v2/jpg/04/12/34/36/1000_F_412343650_Ogy9v3RAJsWPrxDmVcbbsv7HVF3DJo8Y.jpg" class="d-block w-100" style="height: 300px;" alt="nuvens nos topos dos prédios">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"  data-bs-slide="prev">
@@ -30,7 +31,83 @@
         </button>
     </div>
     <p id="info">Para iniciar o carrosel clique nos comandos. Caso queira parar o movimento é somente por o mouse sobre o carousel. Tempo de animação de 2 segundos</p>
-
+    <!--grid with cards-->
+    <div class="container row mx-auto">
+        <div class="col-sm-12 col-md-6 col-lg-4 my-2 my-lg-4 my-md-3">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="https://media.istockphoto.com/id/522136778/photo/white-architecture-and-famous-little-churches-with-blue-domes.jpg?s=612x612&w=0&k=20&c=zcAegwA2S-hJ41tSNITu2cyRoL4v3qFmx5LZZsWUbYY=" alt="Foto da Grécia">
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Vale a pena ir para a Grécia?</h5>
+                    <p class="card-text">Leia sobre passeios, lugares, histórias e muito mais!</p>
+                    <div class="d-flex">
+                        <a href="#" class="btn btn-success mx-auto">Ler notícia</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 my-2 my-lg-4 my-md-3">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="https://media.istockphoto.com/id/522136778/photo/white-architecture-and-famous-little-churches-with-blue-domes.jpg?s=612x612&w=0&k=20&c=zcAegwA2S-hJ41tSNITu2cyRoL4v3qFmx5LZZsWUbYY=" alt="Foto da Grécia">
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Vale a pena ir para a Grécia?</h5>
+                    <p class="card-text">Leia sobre passeios, lugares, histórias e muito mais!</p>
+                    <div class="d-flex">
+                        <a href="#" class="btn btn-success mx-auto">Ler notícia</a>
+                    </div>
+                </div>
+            </div>
+        </div>        
+        <div class="col-sm-12 col-md-6 col-lg-4 my-2 my-lg-4 my-md-3">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="https://media.istockphoto.com/id/522136778/photo/white-architecture-and-famous-little-churches-with-blue-domes.jpg?s=612x612&w=0&k=20&c=zcAegwA2S-hJ41tSNITu2cyRoL4v3qFmx5LZZsWUbYY=" alt="Foto da Grécia">
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Vale a pena ir para a Grécia?</h5>
+                    <p class="card-text">Leia sobre passeios, lugares, histórias e muito mais!</p>
+                    <div class="d-flex">
+                        <a href="#" class="btn btn-success mx-auto">Ler notícia</a>
+                    </div>
+                </div>
+            </div>
+        </div>        
+        <div class="col-sm-12 col-md-6 col-lg-4 my-2 my-lg-4 my-md-3">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="https://media.istockphoto.com/id/522136778/photo/white-architecture-and-famous-little-churches-with-blue-domes.jpg?s=612x612&w=0&k=20&c=zcAegwA2S-hJ41tSNITu2cyRoL4v3qFmx5LZZsWUbYY=" alt="Foto da Grécia">
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Vale a pena ir para a Grécia?</h5>
+                    <p class="card-text">Leia sobre passeios, lugares, histórias e muito mais!</p>
+                    <div class="d-flex">
+                        <a href="#" class="btn btn-success mx-auto">Ler notícia</a>
+                    </div>
+                </div>
+            </div>
+        </div>        
+        <div class="col-sm-12 col-md-6 col-lg-4 my-2 my-lg-4 my-md-3">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="https://media.istockphoto.com/id/522136778/photo/white-architecture-and-famous-little-churches-with-blue-domes.jpg?s=612x612&w=0&k=20&c=zcAegwA2S-hJ41tSNITu2cyRoL4v3qFmx5LZZsWUbYY=" alt="Foto da Grécia">
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Vale a pena ir para a Grécia?</h5>
+                    <p class="card-text">Leia sobre passeios, lugares, histórias e muito mais!</p>
+                    <div class="d-flex">
+                        <a href="#" class="btn btn-success mx-auto">Ler notícia</a>
+                    </div>
+                </div>
+            </div>
+        </div>        
+        <div class="col-sm-12 col-md-6 col-lg-4 my-2 my-lg-4 my-md-3">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="https://media.istockphoto.com/id/522136778/photo/white-architecture-and-famous-little-churches-with-blue-domes.jpg?s=612x612&w=0&k=20&c=zcAegwA2S-hJ41tSNITu2cyRoL4v3qFmx5LZZsWUbYY=" alt="Foto da Grécia">
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Vale a pena ir para a Grécia?</h5>
+                    <p class="card-text">Leia sobre passeios, lugares, histórias e muito mais!</p>
+                    <div class="d-flex">
+                        <a href="#" class="btn btn-success mx-auto">Ler notícia</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
