--- a/index.html
+++ b/index.html
@@ -206,15 +206,16 @@
             <form>
               <div class="mb-3">
                 <label for="nome" class="form-label fw-fold text-colored">Seu nome: </label>
-                <input type="text" id="nome" class="form-control" required>
+                <input type="text" id="cName" name="cName" class="form-control" placeholder="Nome sem abreviações" size="100" required>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label fw-fold text-colored">Seu email: </label>
-                <input type="email" id="email" class="form-control" required>
+                <input type="email" id="email"
+                name="email" class="form-control" placeholder="Email principal" size="100" required>
               </div>
               <div class="mb-3">
                 <label for="telefone" class="form-label fw-fold text-colored">Seu telefone (opcional): </label>
-                <input type="tel" id="telefone" class="form-control">
+                <input type="tel" id="telefone" class="form-control" size="100">
               </div>
               <div class="mb-3">
                 <label for="mensagem" class="form-label fw-fold text-colored">Seu mensagem: </label>
@@ -254,6 +255,12 @@
       </div>
     </section>
   </div>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="./js/jquery.mask.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
