--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
         </div>
         <div class="row">
           <div class="col-md-7">
-            <form>
+            <form id="cadastro">
               <div class="mb-3">
-                <label for="nome" class="form-label fw-fold text-colored">Seu nome: </label>
+                <label for="cName" class="form-label fw-fold text-colored">Seu nome: </label>
                 <input type="text" id="cName" name="cName" class="form-control" placeholder="Nome sem abreviações" size="100" required>
               </div>
               <div class="mb-3">
@@ -214,12 +214,12 @@
                 name="email" class="form-control" placeholder="Email principal" size="100" required>
               </div>
               <div class="mb-3">
-                <label for="telefone" class="form-label fw-fold text-colored">Seu telefone (opcional): </label>
-                <input type="tel" id="telefone" class="form-control" size="100">
+                <label for="tel" class="form-label fw-fold text-colored">Seu telefone (opcional): </label>
+                <input type="tel" id="tel" name="tel" class="form-control" size="100">
               </div>
               <div class="mb-3">
-                <label for="mensagem" class="form-label fw-fold text-colored">Seu mensagem: </label>
-                <textarea id="mensagem" class="form-control" required></textarea>
+                <label for="massage" class="form-label fw-fold text-colored">Seu mensagem: </label>
+                <textarea id="massage" class="form-control" required placeholder="Desde já agradecemos seu contato, fique tranquilo retornaremos assim que possível."></textarea>
               </div>
               <button type="submit" class="btn fw-bold mb-2">Enviar</button>
             </form>
